--- a/task 1/css/style.css
+++ b/task 1/css/style.css
@@ -9,12 +9,15 @@
 }
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black!important;
+    /* background-color: black!important; */
     color: var(--clr-white)!important;
 }
 nav{
 
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.527);
+}
+.bg-black{
+    background-color: black;
 }
 .nav-header{
     height: 80px;
@@ -32,6 +35,8 @@ ul{
     list-style: none;
     margin: 0 !important;
     padding: 0 !important;
+    cursor: pointer;
+    font-weight: 500;
 }
 ul li:not(:last-child){
     margin-right: 2.2rem;
@@ -57,9 +62,7 @@ ul li:not(:last-child){
 .fa{
     font-size: 1rem;
 }
-.fa-chevron-right{
-    margin-left: 1rem;
-}
+
 .banner h1{
     margin-top: 150px;
     font-size: 4rem;
@@ -86,12 +89,19 @@ ul li:not(:last-child){
     padding: .8rem 1rem;
     border-radius: 5px;
 }
+.fa-share-alt{
+    transform: scaleX(-1);
+    margin-left: 1rem;
+}
 .statistic{
     background-color: var(--clr-purple);
     min-height: 20vh;
     border-radius: 10px;
-    padding: 1rem;
+    padding: 1rem 0;
     font-size: 1.2rem;
+}
+.statistic .col-4{
+    padding: 0 2rem;
 }
 .statistic .col-4:not(:last-child){
     border-right: 2px solid var(--clr-dark-purple);
@@ -104,10 +114,38 @@ ul li:not(:last-child){
     font-size: .8rem;
 }
 .brand-container{
+    z-index: 1;
+    position: relative;
     width: 200px!important;
     
 }
 .brand-container img{
+    opacity: .3;
     width: 100%!important;
+}
+.brand-container:nth-child(3){
+    height: 60px;
+}
+.brand-container:nth-child(3) img{
+    height: 100%;
+}
 
+.wave{
+    border-bottom: 2px dotted rgba(255, 255, 255, 0.479);
+}
+.wave svg:hover{
+    cursor: pointer;
+}
+.wave svg{
+    position: relative;
+}
+.wave svg::after{
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--clr-orange);
 }
