--- a/task 1/css/style.css
+++ b/task 1/css/style.css
@@ -129,18 +129,27 @@ ul li:not(:last-child){
 .brand-container:nth-child(3) img{
     height: 100%;
 }
-
+/* .h-80{
+    min-height: 80vh;
+} */
+.h-20{
+    min-height: 20vh;
+}
 .wave{
     border-bottom: 2px dotted rgba(255, 255, 255, 0.479);
 }
 .wave svg:hover{
     cursor: pointer;
 }
-.wave svg{
+.wave{
     position: relative;
 }
-.wave svg::after{
-    content: "";
+.tooltip {
+    display: inline;
+    position: relative;
+  }
+/* .tooltip::after :hover{
+    content: "title";
     position: absolute;
     display: block;
     top: 0;
@@ -148,4 +157,27 @@ ul li:not(:last-child){
     height: 50px;
     border-radius: 50%;
     background-color: var(--clr-orange);
-}
+} */
+/* .tooltip:hover:after{
+    display: -webkit-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: #444;
+    border-radius: 8px;
+    color: #fff;
+    content: attr(title);
+    margin: -82px auto 0;
+    font-size: 16px;
+    padding: 13px;
+    width: 220px;
+  }
+  .tooltip:hover:before{
+    border: solid;
+    border-color: #444 transparent;
+    border-width: 12px 6px 0 6px;
+    content: "";
+    left: 45%;
+    bottom: 30px;
+    position: absolute;
+  } */
